ability to create tasks with all their fields
